--- a/app/templates/controls_dashboard.html
+++ b/app/templates/controls_dashboard.html
@@ -15,14 +15,14 @@
         <h1 class="text-2xl tracking-tight font-bold text-gray-900 {%block hide_title_on_mobile%}{%endblock%}">
           <div class="breadcrumbs p-0">
             <ul>
-              <li><a href="{{url_for("main.controls")}}">Controls</a></li>
+              <li><a href="{{url_for("main.controls")}}">Controles</a></li>
               <li class="text-primary">Dashboard</li>
             </ul>
           </div>
         </h1>
       </div>
     </div>
-    <p class="text-sm text-gray-500 font-medium">View the summary of your controls</p>
+    <p class="text-sm text-gray-500 font-medium">Veja o resumo dos seus controles</p>
   </div>
 </header>
 {%endblock%}
@@ -32,7 +32,7 @@
   <div class="col-span-4">
     <div class="card bg-base-100">
       <div class="card-body">
-        <h2 class="card-title">Controls by Framework</h2>
+        <h2 class="card-title">Controles por Framework</h2>
         <div id="chart1"></div>
       </div>
     </div>
@@ -40,7 +40,7 @@
   <div class="col-span-4">
     <div class="card bg-base-100">
       <div class="card-body">
-        <h2 class="card-title">Controls by Category</h2>
+        <h2 class="card-title">Controles po Categoria</h2>
         <div id="chart2"></div>
       </div>
     </div>
@@ -48,7 +48,7 @@
   <div class="col-span-8">
     <div class="card bg-base-100">
       <div class="card-body">
-        <h2 class="card-title">Controls by Subcategory</h2>
+        <h2 class="card-title">Controles por Subcategoria</h2>
         <div id="chart3"></div>
       </div>
     </div>
