--- a/app/templates/layouts/demo.html
+++ b/app/templates/layouts/demo.html
@@ -7,8 +7,8 @@
 <div class="grid grid-rows-1 grid-flow-col gap-4">
   <div class="card bg-base-100">
     <div class="card-body">
-      <h2 class="card-title">Card title!</h2>
-      <p>If a dog chews shoes whose shoes does he choose?</p>
+      <h2 class="card-title">Título do cartão!</h2>
+      <p>Se um cachorro mastiga sapatos, de quem ele escolhe os sapatos?</p>
     </div>
   </div>
 </div>
@@ -16,16 +16,16 @@
   <div class="col-span-4">
     <div class="card bg-base-100">
       <div class="card-body">
-        <h2 class="card-title">Card title!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
+        <h2 class="card-title">Título do cartão!</h2>
+        <p>Se um cachorro mastiga sapatos, de quem ele escolhe os sapatos?</p>
       </div>
     </div>
   </div>
   <div class="col-span-2">
     <div class="card bg-base-100">
       <div class="card-body">
-        <h2 class="card-title">Card title!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
+        <h2 class="card-title">Título do cartão!</h2>
+        <p>Se um cachorro mastiga sapatos, de quem ele escolhe os sapatos?</p>
       </div>
     </div>
   </div>
@@ -34,7 +34,7 @@
   <div class="col-span-6">
     <div class="card bg-base-100">
       <div class="card-body">
-        <h2 class="card-title mb-4">Card title!</h2>
+        <h2 class="card-title mb-4">Título do cartão!</h2>
 
         <div class="overflow-x-auto">
           <table class="table w-full">
@@ -42,9 +42,9 @@
             <thead>
               <tr>
                 <th></th>
-                <th>Name</th>
-                <th>Job</th>
-                <th>Favorite Color</th>
+                <th>Nome</th>
+                <th>Cargo</th>
+                <th>Cor favorita</th>
               </tr>
             </thead>
             <tbody>
@@ -52,22 +52,22 @@
               <tr>
                 <th>1</th>
                 <td>Cy Ganderton</td>
-                <td>Quality Control Specialist</td>
-                <td>Blue</td>
+                <td>Especialista em Controle de Qualidade</td>
+                <td>Azul</td>
               </tr>
               <!-- row 2 -->
               <tr>
                 <th>2</th>
                 <td>Hart Hagerty</td>
-                <td>Desktop Support Technician</td>
-                <td>Purple</td>
+                <td>Técnico de suporte de desktop</td>
+                <td>Roxo</td>
               </tr>
               <!-- row 3 -->
               <tr>
                 <th>3</th>
                 <td>Brice Swyre</td>
-                <td>Tax Accountant</td>
-                <td>Red</td>
+                <td>Contador</td>
+                <td>Vermelho</td>
               </tr>
             </tbody>
           </table>
