--- a/app/templates/view_rendered_policy.html
+++ b/app/templates/view_rendered_policy.html
@@ -1,11 +1,12 @@
 <html lang="en"><head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.">
-<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+<meta name="description" content="Kit de ferramentas de front-end poderoso, extensível e repleto de recursos. Crie e personalize com Sass, utilize sistemas e componentes de grade pré-construídos e dê vida aos projetos com poderosos plug-ins JavaScript.">
+<meta name="author" content="EVERCO e Colaboradores do Bootstrap">
 <meta name="generator" content="Hugo 0.104.2">
 
-<meta name="docsearch:language" content="en">
+<!-- <meta name="docsearch:language" content="en"> -->
+<meta name="docsearch:language" content="pt-br">
 <meta name="docsearch:version" content="5.2">
 
 <title>{{policy.policy.name}}</title>
@@ -80,10 +81,10 @@ header.navbar.navbar-expand-lg.navbar-dark.bd-navbar.sticky-top {
     <span class="d-lg-none" aria-hidden="true">{{policy.policy.tenant.name}}</span><span class="visually-hidden">{{policy.policy.tenant.name}}&nbsp;</span> v{{policy.policy.version}} <span class="visually-hidden">(switch to other versions)</span>
   </button>
   <ul class="dropdown-menu dropdown-menu-end">
-    <li><h6 class="dropdown-header">Previous releases</h6></li>
+    <li><h6 class="dropdown-header">Versões anteriores</h6></li>
     <li><a class="dropdown-item" href="">vc</a></li>
     <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="">All versions</a></li>
+    <li><a class="dropdown-item" href="">Todas versões</a></li>
   </ul>
 </li>
 
@@ -110,11 +111,11 @@ header.navbar.navbar-expand-lg.navbar-dark.bd-navbar.sticky-top {
       {%endif%}
       
       <p class="text-muted mb-0">
-        Currently <strong class="d-sm-inline-block p-2 me-2 mb-2 mb-lg-0 rounded-3 masthead-notice">v{{policy.policy.version}}</strong>
+        Atualmente <strong class="d-sm-inline-block p-2 me-2 mb-2 mb-lg-0 rounded-3 masthead-notice">v{{policy.policy.version}}</strong>
         <span class="px-1">·</span>
         <a href="" class="link-secondary">Download</a>
         <span class="px-1">·</span>
-        <a href="" class="link-secondary">Changes</a>
+        <a href="" class="link-secondary">Mudanças</a>
       </p>
       
 
