--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -17,14 +17,14 @@
         </div>
         <div class="form-control">
           <label class="label">
-            <span class="label-text font-semibold">Password</span>
+            <span class="label-text font-semibold">Senha</span>
           </label>
-          <input class="input input-bordered" placeholder="{{ _('Password') }}" id="password" name="password" type="password" required/>
+          <input class="input input-bordered" placeholder="{{ _('Senha') }}" id="password" name="password" type="password" required/>
           <label class="label">
-            <a href="{{url_for("auth.reset_password_request")}}" class="label-text-alt link link-hover">Forgot password?</a>
+            <a href="{{url_for("auth.reset_password_request")}}" class="label-text-alt link link-hover">Esqueceu sua senha?</a>
           </label>
           {%if config.ENABLE_SELF_REGISTRATION == "1"%}
-          <p class="text-primary text-xs font-medium ml-1 link link-hover"><a href="{{url_for("auth.register")}}">Don't have an account? Sign up here</a></p>
+          <p class="text-primary text-xs font-medium ml-1 link link-hover"><a href="{{url_for("auth.register")}}">Não possui uma conta? Registre-se aqui</a></p>
           {%endif%}
         </div>
         <div class="form-control mt-6">
@@ -34,7 +34,7 @@
       {%if config.ENABLE_GOOGLE_AUTH == "1"%}
       <div class="divider h-1">OR</div>
       <div class="form-control">
-        <button class="btn">Login with <svg class="ml-2 w-6 h-6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 48 48"><defs><path id="a" d="M44.5 20H24v8.5h11.8C34.7 33.9 30.1 37 24 37c-7.2 0-13-5.8-13-13s5.8-13 13-13c3.1 0 5.9 1.1 8.1 2.9l6.4-6.4C34.6 4.1 29.6 2 24 2 11.8 2 2 11.8 2 24s9.8 22 22 22c11 0 21-8 21-22 0-1.3-.2-2.7-.5-4z"/></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath><path clip-path="url(#b)" fill="#FBBC05" d="M0 37V11l17 13z"/><path clip-path="url(#b)" fill="#EA4335" d="M0 11l17 13 7-6.1L48 14V0H0z"/><path clip-path="url(#b)" fill="#34A853" d="M0 37l30-23 7.9 1L48 0v48H0z"/><path clip-path="url(#b)" fill="#4285F4" d="M48 48L17 24l-4-3 35-10z"/></svg></button>
+        <button class="btn">Logar com <svg class="ml-2 w-6 h-6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 48 48"><defs><path id="a" d="M44.5 20H24v8.5h11.8C34.7 33.9 30.1 37 24 37c-7.2 0-13-5.8-13-13s5.8-13 13-13c3.1 0 5.9 1.1 8.1 2.9l6.4-6.4C34.6 4.1 29.6 2 24 2 11.8 2 2 11.8 2 24s9.8 22 22 22c11 0 21-8 21-22 0-1.3-.2-2.7-.5-4z"/></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath><path clip-path="url(#b)" fill="#FBBC05" d="M0 37V11l17 13z"/><path clip-path="url(#b)" fill="#EA4335" d="M0 11l17 13 7-6.1L48 14V0H0z"/><path clip-path="url(#b)" fill="#34A853" d="M0 37l30-23 7.9 1L48 0v48H0z"/><path clip-path="url(#b)" fill="#4285F4" d="M48 48L17 24l-4-3 35-10z"/></svg></button>
       </div>
       {%endif%}
       </div>
