--- a/app/templates/auth/reset_password_request.html
+++ b/app/templates/auth/reset_password_request.html
@@ -17,7 +17,7 @@
         </div>
         <p class="text-xs font-medium link link-hover mt-2"><a href="{{url_for("auth.login")}}">Login</a></p>
         <div class="form-control mt-6">
-          <button class="btn btn-primary">Request Password Reset</button>
+          <button class="btn btn-primary">Senha Requisitada Resetar</button>
         </div>
       </form>
       </div>
