--- a/app/templates/labels.html
+++ b/app/templates/labels.html
@@ -7,23 +7,23 @@
   {{ macro.filehelper(datatables=True) }}
 {% endblock %}
 
-{%block page_header_title%}Labels<p class="text-sm  font-medium">Labels are variables that are used in your policies</p>{%endblock%}
+{%block page_header_title%}Rótulos<p class="text-sm  font-medium">Rótulos são variáveis ​​usadas em suas políticas</p>{%endblock%}
 {%block page_header_title_border%}{%endblock%}
-{%block page_header_buttons%}<button class="btn btn-sm modal-button">New</button>{%endblock%}
+{%block page_header_buttons%}<button class="btn btn-sm modal-button">Novo</button>{%endblock%}
 
 {%block content%}
 <div class="grid grid-cols-6 gap-4 mt-2">
   <div class="col-span-6">
     <div class="card bg-base-100 border border-base-200">
       <div class="card-body">
-        <h2 class="card-title mb-4">Labels</h2>
+        <h2 class="card-title mb-4">Rótulos</h2>
         <table class="table table-vcenter" id="labels" style="width:100%">
           <thead>
             <tr>
               <th class="w-1">ID</th>
-              <th>Key</th>
-              <th>Value</th>
-              <th class="w-1">Delete</th>
+              <th>Chave</th>
+              <th>Valor</th>
+              <th class="w-1">Excluir</th>
             </tr>
           </thead>
           <tbody id="label-body"></tbody>
@@ -36,7 +36,7 @@
 <input type="checkbox" id="label-modal" class="modal-toggle" />
 <label for="label-modal" class="modal cursor-pointer">
   <label class="modal-box relative w-11/12 max-w-5xl" for="">
-    <h3 class="text-lg font-bold">New Label</h3>
+    <h3 class="text-lg font-bold">Novo Rótulo</h3>
 	<div class="py-4 sm:mt-0">
 	  <div class="md:grid md:grid-cols-1 md:gap-6">
 		<div class="mt-5 md:col-span-2 md:mt-0">
@@ -44,17 +44,17 @@
 			  <div class="px-4 py-5 sm:p-6">
 				<div class="grid grid-cols-6 gap-6">
 				  <div class="col-span-3 sm:col-span-3">
-					<label for="key" class="block text-sm font-medium ">Key (e.g. policy_label_security_email)</label>
-					<input placeholder="Must start with policy_label_ (policy_label_yourkey)" type="text" name="key" id="key" class="mt-3 border-2 block w-full rounded-md border-base-300 shadow-sm input-md">
+					<label for="key" class="block text-sm font-medium ">Chave (e.g. política_rótulo_email_segurança)</label>
+					<input placeholder="Deve começar com política_rótulo_ (política_rótulo_suachave)" type="text" name="key" id="key" class="mt-3 border-2 block w-full rounded-md border-base-300 shadow-sm input-md">
 				  </div>
 				  <div class="col-span-3 sm:col-span-3">
-					<label for="value" class="block text-sm font-medium ">Value (e.g. security@acme.org)</label>
+					<label for="value" class="block text-sm font-medium ">Valor (e.g. security@acme.org)</label>
 					<input type="text" name="value" id="value" class="mt-3 border-2 block w-full rounded-md border-base-300 shadow-sm input-md">
 				  </div>
 				</div>
 			  </div>
 			  <div class="px-4 py-3 text-right sm:px-6">
-				<button class="btn btn-primary save-label-btn">Save</button>
+				<button class="btn btn-primary save-label-btn">Salvar</button>
 			  </div>
 			</div>
 		</div>
@@ -66,10 +66,10 @@
 <input type="checkbox" id="delete-modal" class="modal-toggle" />
 <label for="delete-modal" class="modal cursor-pointer">
   <label class="modal-box relative" for="">
-    <h3 class="text-lg font-bold">Are you sure you want to delete this label?</h3>
+    <h3 class="text-lg font-bold">Tem certeza de que deseja excluir este marcador?</h3>
 	<div class="py-4 sm:mt-0">
           <div class="modal-action">
-            <label for="my-modal" class="btn btn-error delete-button">Delete</label>
+            <label for="my-modal" class="btn btn-error delete-button">Excluir</label>
           </div>
 	</div>
   </label>
@@ -82,15 +82,15 @@
     $(document).on('click', '.save-label-btn', function() {
         var key = $("#key").val();
         if (key == null || key.length === 0 || !key.startsWith("policy_label_")){
-          toast("Please provide a key with the prefix: policy_label_<your key>","error")
+          toast("Forneça uma chave com o prefixo: politica_rótulo_<sua chave>","error")
           return
         }
         var value = $("#value").val();
         if (value == null || value.length === 0){
-          toast("Please provide a value","error")
+          toast("Forneça um valor","error")
           return
         }
-        data = {"key":key,"value":value}
+        data = {"chave":key,"valor":value}
         var selectedTenant = getTenant();
         $.ajax({
           type: "POST",
@@ -99,7 +99,7 @@
           contentType: "application/json; charset=utf-8",
           dataType: "json",
           success: function(data){
-            toast("Created label")
+            toast("Rótulo Criado!")
             document.getElementById('label-modal').checked = false;
             loadLabelTable()
             return(data)
