--- a/app/templates/layouts/bootstrap.html
+++ b/app/templates/layouts/bootstrap.html
@@ -65,7 +65,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link base-content-100" href="{{url_for(" main.questionnaires")}}">
-                Forms
+                Formulários
               </a>
             </li>
           </ul>
@@ -75,7 +75,7 @@
       {%block sidebar_flex%}<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">{%endblock%}
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
           {%block page_header%}<h1 class="h2 base-content-100 text-capitalize">{%block page_header_title%}<a
-              href="">Forms</a> / Create Form{%endblock%}</h1>{%endblock%}
+              href="">Formulários</a> / Criar formulário{%endblock%}</h1>{%endblock%}
 
           <div class="w-50 text-right mb-2 mb-md-0">
             {%block page_header_buttons%}
