--- a/app/templates/management/tenant_users.html
+++ b/app/templates/management/tenant_users.html
@@ -6,9 +6,9 @@
   {{ macro.filehelper(datatables=True,select2=True) }}
 {% endblock %}
 
-{%block page_header_title%}Tenant Users{%endblock%}
+{%block page_header_title%}Usuários Locatários{%endblock%}
 {%block page_header_title_border%}{%endblock%}
-{%block page_header_buttons%}<button class="btn btn-sm add-user-btn btn-primary">Add User</button>{%endblock%}
+{%block page_header_buttons%}<button class="btn btn-sm add-user-btn btn-primary">Adicionar Usuário</button>{%endblock%}
 
 {%block content%}
 <div class="grid grid-cols-6 gap-4">
@@ -16,14 +16,14 @@
   <div class="col-span-6">
     <div class="card bg-base-100 border border-base-200">
       <div class="card-body">
-        <h2 class="card-title mb-4">Users</h2>
+        <h2 class="card-title mb-4">Usuários</h2>
               <table class="table table-vcenter" id="users" style="width:100%">
                 <thead>
                   <tr>
                     <th>Email</th>
-                    <th class="w-1">Active</th>
-                    <th>Roles</th>
-                    <th class="w-1">Manage</th>
+                    <th class="w-1">Ativo</th>
+                    <th>Funções</th>
+                    <th class="w-1">Gerenciar</th>
                   </tr>
                 </thead>
                 <tbody id="user-body"></tbody>
@@ -37,7 +37,7 @@
 <div class="modal">
   <div class="modal-box relative w-11/12 max-w-7xl">
     <label for="edit-user-modal" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
-    <h3 class="text-lg font-bold">Edit User</h3>
+    <h3 class="text-lg font-bold">Editar Usuário</h3>
         <div class="py-4 sm:mt-0">
           <div class="md:grid md:grid-cols-1 md:gap-6">
                 <div class="mt-5 md:col-span-2 md:mt-0">
@@ -46,12 +46,12 @@
                                   <div class="col-span-6 sm:col-span-3">
                                     <label for="roles" class="block text-sm font-medium mb-2">Roles</label>
                                     <select class="input-roles" style="width: 100%" name="roles[]" multiple="multiple"></select>
-                                    <p class="font-medium text-xs mt-2">The <b>Vendor</b> role will remove any other roles. Vendors only have access to the Questionnaire page. If the vendor role is removed, they will lose access to all questionnaires!</p>
+                                    <p class="font-medium text-xs mt-2">A função <b>Fornecedor</b> removerá quaisquer outras funções. Os fornecedores só têm acesso à página Questionário. Se a função de fornecedor for removida, eles perderão o acesso a todos os questionários!</p>
                                   </div>
                           </div>
                           <div class="px-4 py-3 text-right sm:px-6">
-                                <button class="btn btn-error save-remove-btn">Remove User</button>
-                                <button class="btn btn-primary save-edit-btn">Save</button>
+                                <button class="btn btn-error save-remove-btn">Remover Usuário</button>
+                                <button class="btn btn-primary save-edit-btn">Salvar</button>
                           </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
 <input type="checkbox" id="add-user-modal" class="modal-toggle" />
 <label for="add-user-modal" class="modal cursor-pointer">
   <label class="modal-box relative w-11/12 max-w-5xl" for="">
-    <h3 class="text-lg font-bold">Add User</h3>
+    <h3 class="text-lg font-bold">Adicionar Usuário</h3>
         <div class="py-4 sm:mt-0">
           <div class="md:grid md:grid-cols-1 md:gap-6">
                 <div class="mt-5 md:col-span-2 md:mt-0">
@@ -75,11 +75,11 @@
                                         <input placeholder="Enter the email to invite" type="email" name="email" id="email" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm input-md">
                                   </div>
                                   <div class="col-span-3 sm:col-span-3">
-                                        <label class="block text-sm font-medium ">Tenant</label>
+                                        <label class="block text-sm font-medium ">Locatário</label>
                                         <input type="text" name="tenant" id="tenant" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm input-md capitalize" disabled>
                                   </div>
                                   <div class="col-span-3 sm:col-span-3">
-                                        <label class="block text-sm font-medium">Roles</label>
+                                        <label class="block text-sm font-medium">Funções</label>
                                         <select class="user-roles w-full mt-3" name="roles[]" multiple="multiple">
                                           {%for role in roles%}
                                           <option class="capitalize" value="{{role.name}}">{{role.name}}</option>
@@ -89,7 +89,7 @@
                                 </div>
                           </div>
                           <div class="px-4 py-3 text-right sm:px-6">
-                                <button class="btn btn-primary save-user-btn">Save</button>
+                                <button class="btn btn-primary save-user-btn">Salvar</button>
                           </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
       contentType: "application/json; charset=utf-8",
       dataType: "json",
       success: function(data){
-        toast("Edited user settings")
+        toast("Configurações de usuário editadas")
         document.getElementById('edit-user-modal').checked = false;
         loadUserTable()
         return(data)
@@ -135,7 +135,7 @@
       contentType: "application/json; charset=utf-8",
       dataType: "json",
       success: function(data){
-        toast("Removed user from tenant")
+        toast("Usuário removido do locatário")
         document.getElementById('edit-user-modal').checked = false;
         loadUserTable()
         return(data)
@@ -159,7 +159,7 @@
         dataType: "json",
         success: function(data){
           $(".input-roles").select2({closeOnSelect: false});
-          var roleDivHtml = '<label for="roles" class="block text-sm font-medium ">Roles</label>'
+          var roleDivHtml = '<label for="roles" class="block text-sm font-medium ">Funções</label>'
           for (var role in data) {
             if (data[role].enabled) {
               var newOption = new Option(data[role].role_name, data[role].role_id, false, true);
@@ -198,16 +198,16 @@
         dataType: "json",
         success: function(data){
           if (!data.email_sent) {
-            toast("Email is not configured. Please set up email and/or share the link","warning")
+            toast("O e-mail não está configurado. Configure o e-mail e/ou compartilhe o link","warning")
           } else {
-            toast("Invited user")
+            toast("Usuário convidado")
           }
           document.getElementById('add-user-modal').checked = false;
           loadUserTable()
           $("#invite-user-url").html(`
             <div class="alert bg-neutral text-neutral-content shadow-sm overflow-x-auto text-xs">
               <div>
-                <span><b>You can also share the sign up link:</b> ${data.url}</span>
+                <span><b>Você também pode compartilhar o link de inscrição:</b> ${data.url}</span>
               </div>
             </div>
           `)
