--- a/app/templates/policies.html
+++ b/app/templates/policies.html
@@ -7,23 +7,23 @@
   {{ macro.filehelper(datatables=True) }}
 {% endblock %}
 
-{%block page_header_title%}Policies<p class="text-sm  font-medium">Policies can be added to your projects and associated with controls</p>{%endblock%}
+{%block page_header_title%}Políticas<p class="text-sm  font-medium">As políticas podem ser adicionadas aos seus projetos e associadas aos controles</p>{%endblock%}
 {%block page_header_title_border%}{%endblock%}
-{%block page_header_buttons%}<button class="btn btn-sm modal-button btn-primary">New</button>{%endblock%}
+{%block page_header_buttons%}<button class="btn btn-sm modal-button btn-primary">Novo</button>{%endblock%}
 
 {%block content%}
 <div class="grid grid-cols-6 gap-4 mt-2">
             <div class="col-span-6">
     <div class="card bg-base-100 border border-base-200">
       <div class="card-body">
-        <h2 class="card-title mb-2">Policies</h2>
+        <h2 class="card-title mb-2">Políticas</h2>
         <table class="table table-vcenter" id="policies" style="width:100%">
           <thead>
             <tr>
-              <th class="w-1">Reference</th>
-              <th>Name</th>
-              <th>Description</th>
-              <th class="w-1">More</th>
+              <th class="w-1">Referências</th>
+              <th>Nome</th>
+              <th>Descrição</th>
+              <th class="w-1">Mais</th>
             </tr>
           </thead>
           <tbody id="policy-body"></tbody>
@@ -38,13 +38,13 @@
   <label class="modal-box relative w-11/12 max-w-5xl" for="">
     <h3 id="add-to-project-modal-title" class="text-lg font-bold"></h3>
     <div id="add-to-project-modal-body" class="card-body">
-      <label class="block text-sm font-medium ">Selected Policy</label>
+      <label class="block text-sm font-medium ">Política Selecionada</label>
       <p id="modal-p" class="mb-2"></p>
-      <label class="block text-sm font-medium ">Select the Project</label>
+      <label class="block text-sm font-medium ">Selecione o Projeto</label>
       <select id="selected-project" class="select select-bordered w-full max-w-xs"></select>
     </div>
     <div class="px-4 py-3 text-right sm:px-6">
-      <button class="btn btn-primary btn-save-policy-to-project">Save</button>
+      <button class="btn btn-primary btn-save-policy-to-project">Salvar</button>
     </div>
   </label>
 </label>
@@ -52,7 +52,7 @@
 <input type="checkbox" id="policy-modal" class="modal-toggle" />
 <label for="policy-modal" class="modal cursor-pointer">
   <label class="modal-box relative w-11/12 max-w-5xl" for="">
-    <h3 class="text-lg font-bold">New Policy</h3>
+    <h3 class="text-lg font-bold">Nova Política</h3>
         <div class="py-4 sm:mt-0">
           <div class="md:grid md:grid-cols-1 md:gap-6">
                 <div class="mt-5 md:col-span-2 md:mt-0">
@@ -60,21 +60,21 @@
                           <div class="px-4 py-5 sm:p-6">
                                 <div class="grid grid-cols-6 gap-6">
                                   <div class="col-span-3 sm:col-span-3">
-                                        <label class="block text-sm font-medium ">Name</label>
-                                        <input placeholder="Enter the name of the policy" type="text" name="name" id="name" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm input-md">
+                                        <label class="block text-sm font-medium ">Nome</label>
+                                        <input placeholder="Insira o nome da política" type="text" name="name" id="name" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm input-md">
                                   </div>
                                   <div class="col-span-3 sm:col-span-3">
-                                        <label class="block text-sm font-medium ">Description</label>
-                                        <input type="text" placeholder="Enter the description" name="description" id="description" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm input-md">
+                                        <label class="block text-sm font-medium ">Descrição</label>
+                                        <input type="text" placeholder="Insira a descrição" name="description" id="description" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm input-md">
                                   </div>
                                   <div class="col-span-3 sm:col-span-3">
-                                        <label class="block text-sm font-medium ">Reference Code</label>
-                                        <input placeholder="Enter the code of the policy" type="text" name="code" id="code" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm input-md">
+                                        <label class="block text-sm font-medium ">Código de Referência</label>
+                                        <input placeholder="Digite o código da apólice" type="text" name="code" id="code" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm input-md">
                                   </div>
                                 </div>
                           </div>
                           <div class="px-4 py-3 text-right sm:px-6">
-                                <button class="btn btn-primary create-policy">Save</button>
+                                <button class="btn btn-primary create-policy">Salvar</button>
                           </div>
                         </div>
                 </div>
@@ -93,7 +93,7 @@
       if (!selectedTenant.id) {
         $('#controls').DataTable({"pageLength":25,"order": [[ 0, "desc" ]]});
       } else {
-      $("#policy-body").html('<div class="col-span-9 mx-auto mt-10"><div role="status"><svg aria-hidden="true" class="mr-2 w-8 h-8 animate-spin text-gray-200 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/><path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/></svg><span class="sr-only">Loading...</span></div></div>')
+      $("#policy-body").html('<div class="col-span-9 mx-auto mt-10"><div role="status"><svg aria-hidden="true" class="mr-2 w-8 h-8 animate-spin text-gray-200 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/><path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/></svg><span class="sr-only">Carregando...</span></div></div>')
       $.ajax({
         type: "GET",
         url: `/api/v1/tenants/${selectedTenant.id}/policies`,
@@ -101,7 +101,7 @@
         dataType: "json",
         success: function(data){
           for (var policy in data) {
-            $("#policy-body").append(`<tr data-policy-id=${data[policy].id}><td class="text-sm font-medium "><p class="font-medium text-xs uppercase text-primary bg-base-200 rounded-full py-1 px-3 w-fit">${clean(data[policy].ref_code)}</p></td><td class="text-sm font-medium capitalize">${clean(data[policy].name)}</td><td class="text-sm font-medium ">${clean(data[policy].description)}</td><td class="text-center"><div class="dropdown dropdown-top dropdown-end"><label tabindex="0" class="btn btn-sm btn-ghost"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" /></svg></label><ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52"><li><a href="/policies/${data[policy].id}" class="view">View</a></li><li><a data-name="${clean(data[policy].name)}" data-id="${data[policy].id}" class="add-to-project">Add to project</a></li><li><a data-id="${data[policy].id}" class="delete-policy">Delete</a></li></ul></div></td></tr>`);
+            $("#policy-body").append(`<tr data-policy-id=${data[policy].id}><td class="text-sm font-medium "><p class="font-medium text-xs uppercase text-primary bg-base-200 rounded-full py-1 px-3 w-fit">${clean(data[policy].ref_code)}</p></td><td class="text-sm font-medium capitalize">${clean(data[policy].name)}</td><td class="text-sm font-medium ">${clean(data[policy].description)}</td><td class="text-center"><div class="dropdown dropdown-top dropdown-end"><label tabindex="0" class="btn btn-sm btn-ghost"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" /></svg></label><ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52"><li><a href="/policies/${data[policy].id}" class="view">Vizualizar</a></li><li><a data-name="${clean(data[policy].name)}" data-id="${data[policy].id}" class="add-to-project">Adicionar ao Projeto</a></li><li><a data-id="${data[policy].id}" class="delete-policy">Excluir</a></li></ul></div></td></tr>`);
           }
           $('#policies').DataTable({"pageLength":25,"order": [[ 0, "desc" ]]});
           return(data)
@@ -122,7 +122,7 @@
          contentType: "application/json; charset=utf-8",
          dataType: "json",
          success: function(data){
-             toast("Deleted policy")
+             toast("Política Excluída!")
              loadPolicyTable()
              return(data)
          },
@@ -136,9 +136,9 @@
     });
      $(document).on('click', '.create-policy', function() {
        var data = {
-           "name":$("#name").val(),
-           "description":$("#description").val(),
-           "code":$("#code").val(),
+           "nome":$("#name").val(),
+           "descrição":$("#description").val(),
+           "código":$("#code").val(),
        };
        var selectedTenant = getTenant();
        $.ajax({
@@ -148,7 +148,7 @@
          contentType: "application/json; charset=utf-8",
          dataType: "json",
          success: function(data){
-             toast("Added policy")
+             toast("Política Adicionada!")
              document.getElementById('policy-modal').checked = false;
              loadPolicyTable()
              return(data)
@@ -167,7 +167,7 @@
          contentType: "application/json; charset=utf-8",
          dataType: "json",
          success: function(data){
-             toast(`Added policy to the project. <a href='/projects/${selectedProjectId}?tab=policies' class='btn btn-xs ml-2'>View</a>`)
+             toast(`Política adicionada ao projeto! <a href='/projects/${selectedProjectId}?tab=policies' class='btn btn-xs ml-2'>Vizualizar</a>`)
              document.getElementById('add-to-project-modal').checked = false;
              return(data)
          },
@@ -180,7 +180,7 @@
      $(document).on('click', '.add-to-project', function() {
        var policyId = $(this).data('id')
        var policyName = $(this).data('name')
-       $("#modal-p").html('<div class="col-span-9 mx-auto mt-10"><div role="status"><svg aria-hidden="true" class="mr-2 w-8 h-8 animate-spin text-gray-200 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/><path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/></svg><span class="sr-only">Loading...</span></div></div>')
+       $("#modal-p").html('<div class="col-span-9 mx-auto mt-10"><div role="status"><svg aria-hidden="true" class="mr-2 w-8 h-8 animate-spin text-gray-200 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/><path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/></svg><span class="sr-only">Carregando...</span></div></div>')
        document.getElementById('add-to-project-modal').checked = true;
        $("#selected-project").html("")
        var selectedTenant = getTenant();
@@ -194,7 +194,7 @@
                $("#selected-project").append(`<option value="${data[project].id}">${data[project].name}</option>`)
              }
              $(".btn-save-policy-to-project").data("id",policyId)
-             $("#add-to-project-modal-title").html(`Which project would you like to add this policy to?`)
+             $("#add-to-project-modal-title").html(`A qual projeto você gostaria de adicionar esta política?`)
              $("#modal-p").html(`${policyName}`)
              return(data)
          },
