--- a/app/templates/tags.html
+++ b/app/templates/tags.html
@@ -7,9 +7,9 @@
   {{ macro.filehelper(datatables=True) }}
 {% endblock %}
 
-{%block page_header_title%}Tags<p class="text-sm  font-medium">Tags allow you to logically group controls, policies together</p>{%endblock%}
+{%block page_header_title%}Etiquetas<p class="text-sm  font-medium">As etiquetas permitem agrupar logicamente controles e políticasr</p>{%endblock%}
 {%block page_header_title_border%}{%endblock%}
-{%block page_header_buttons%}<button class="btn btn-sm modal-button">New</button>{%endblock%}
+{%block page_header_buttons%}<button class="btn btn-sm modal-button">Novo</button>{%endblock%}
 
 {%block content%}
 
@@ -17,13 +17,13 @@
   <div class="col-span-6">
     <div class="card bg-base-100 border border-base-200">
       <div class="card-body">
-        <h2 class="card-title mb-4">Tags</h2>
+        <h2 class="card-title mb-4">Etiquetas</h2>
         <table class="table table-vcenter" id="tags" style="width:100%">
           <thead>
             <tr>
               <th class="w-1">ID</th>
-              <th>Name</th>
-              <th class="w-1">Delete</th>
+              <th>Nome</th>
+              <th class="w-1">Excluir</th>
             </tr>
           </thead>
           <tbody id="tag-body"></tbody>
@@ -36,7 +36,7 @@
 <input type="checkbox" id="tag-modal" class="modal-toggle" />
 <label for="tag-modal" class="modal cursor-pointer">
   <label class="modal-box relative w-11/12 max-w-5xl" for="">
-    <h3 class="text-lg font-bold">New Tag</h3>
+    <h3 class="text-lg font-bold">Nova Etiqueta</h3>
 	<div class="py-4 sm:mt-0">
 	  <div class="md:grid md:grid-cols-1 md:gap-6">
 		<div class="mt-5 md:col-span-2 md:mt-0">
@@ -44,13 +44,13 @@
 			  <div class="px-4 py-5 sm:p-6">
 				<div class="grid grid-cols-6 gap-6">
 				  <div class="col-span-6 sm:col-span-3">
-					<label for="name" class="block text-sm font-medium ">Name</label>
+					<label for="name" class="block text-sm font-medium ">Nome</label>
 					<input type="text" name="name" id="name" class="mt-3 border block w-full rounded-md border-base-300 shadow-sm  input-md">
 				  </div>
 				</div>
 			  </div>
 			  <div class="px-4 py-3 text-right sm:px-6">
-				<button class="btn btn-primary save-tag-btn">Save</button>
+				<button class="btn btn-primary save-tag-btn">Salvar</button>
 			  </div>
 			</div>
 		</div>
@@ -62,10 +62,10 @@
 <input type="checkbox" id="delete-modal" class="modal-toggle" />
 <label for="delete-modal" class="modal cursor-pointer">
   <label class="modal-box relative" for="">
-    <h3 class="text-lg font-bold">Are you sure you want to delete this tag?</h3>
+    <h3 class="text-lg font-bold">Tem certeza de que deseja excluir esta tag?</h3>
 	<div class="py-4 sm:mt-0">
           <div class="modal-action">
-            <label for="my-modal" class="btn btn-error delete-button">Delete</label>
+            <label for="my-modal" class="btn btn-error delete-button">Excluir</label>
           </div>
 	</div>
   </label>
@@ -78,7 +78,7 @@
     $(document).on('click', '.save-tag-btn', function() {
         var name = $("#name").val();
         if (name == null || name.length === 0){
-          toast("Please provide a name","error")
+          toast("Forneça um nome","error")
           return
         }
         data = {"name":name}
@@ -90,7 +90,7 @@
           contentType: "application/json; charset=utf-8",
           dataType: "json",
           success: function(data){
-            toast("Created tag")
+            toast("Etiqueta criada!")
             document.getElementById('tag-modal').checked = false;
             loadTagTable()
             return(data)
@@ -144,7 +144,7 @@
         contentType: "application/json; charset=utf-8",
         dataType: "json",
         success: function(data){
-          toast("Deleted Tag")
+          toast("Etiqueta Excluída")
           loadTagTable()
           document.getElementById('delete-modal').checked = false;
           return(data)
