--- a/app/templates/view_policies_in_project.html
+++ b/app/templates/view_policies_in_project.html
@@ -15,9 +15,9 @@
               <h1 class="text-2xl tracking-tight font-bold text-gray-900 {%block hide_title_on_mobile%}{%endblock%}">
                 <div class="breadcrumbs p-0">
                   <ul>
-                    <li><a href="{{url_for("main.projects")}}">Projects</a></li>
+                    <li><a href="{{url_for("main.projects")}}">Projetos</a></li>
                     <li><a href="{{url_for("main.view_project",id=project.id)}}">{{project.name}}</a></li>
-                    <li class="text-primary">Policies</li>
+                    <li class="text-primary">Políticas</li>
                   </ul>
                 </div>
               </h1>
@@ -25,10 +25,10 @@
           </div>
         </div>
         <div class="tabs max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 gap-x-4">
-          <a href="{{url_for("main.view_project",id=project.id)}}" class="tab tab-lg tab-lifted text-sm font-medium border-b-0 !px-8 hover:text-primary text-gray-500">Project Summary</a>
-          <a href="{{url_for("main.view_policies_in_project",id=project.id)}}" class="tab tab-lg tab-lifted text-sm font-medium border-b-0 !px-8 hover:text-primary text-primary tab-active">Policies</a>
-          <a href="{{url_for("main.view_controls_in_project",id=project.id)}}" class="tab tab-lg tab-lifted text-sm font-medium border-b-0 !px-8 hover:text-primary text-gray-500">Controls</a>
-          <a href="{{url_for("main.view_settings_in_project",id=project.id)}}" class="tab tab-lg tab-lifted text-sm font-medium border-b-0 !px-8 hover:text-primary text-gray-500">Settings</a>
+          <a href="{{url_for("main.view_project",id=project.id)}}" class="tab tab-lg tab-lifted text-sm font-medium border-b-0 !px-8 hover:text-primary text-gray-500">Resumo do Projeto</a>
+          <a href="{{url_for("main.view_policies_in_project",id=project.id)}}" class="tab tab-lg tab-lifted text-sm font-medium border-b-0 !px-8 hover:text-primary text-primary tab-active">Políticas</a>
+          <a href="{{url_for("main.view_controls_in_project",id=project.id)}}" class="tab tab-lg tab-lifted text-sm font-medium border-b-0 !px-8 hover:text-primary text-gray-500">Controles</a>
+          <a href="{{url_for("main.view_settings_in_project",id=project.id)}}" class="tab tab-lg tab-lifted text-sm font-medium border-b-0 !px-8 hover:text-primary text-gray-500">Configurações</a>
         </div>
     </header>
 {%endblock%}
@@ -38,15 +38,15 @@
             <div class="col-span-6">
     <div class="card bg-base-100">
       <div class="card-body">
-        <h2 class="card-title mb-2">Policies</h2>
-        <p class="text-sm text-gray-500 font-medium mb-4">These policies are included in your SOC2 project. Be sure to update the status and implementation effort. <a href="{{config.DOC_LINK}}" class="text-primary">Need help?</a></p>
+        <h2 class="card-title mb-2">Políticas</h2>
+        <p class="text-sm text-gray-500 font-medium mb-4">Essas políticas estão incluídas no seu projeto SOC2. Certifique-se de atualizar o status e o esforço de implementação. <a href="{{config.DOC_LINK}}" class="text-primary">Precisa de Ajuda?</a></p>
         <table class="table table-vcenter table-bordered" id="policies-table" style="width:100%">
           <thead>
             <tr>
-              <th class="w-1">Ref Code</th>
-              <th>Name</th>
-              <th class="w-1">Assoc Controls</th>
-              <th class="w-1">More</th>
+              <th class="w-1">Código Ref</th>
+              <th>Nome</th>
+              <th class="w-1">Controles Assoc</th>
+              <th class="w-1">Mais</th>
             </tr>
           </thead>
           <tbody>
@@ -59,8 +59,8 @@
 <div class="dropdown dropdown-top dropdown-end">
   <label tabindex="0" class="btn btn btn-sm border border-white btn-outline"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" /></svg></label>
   <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
-    <li><a href="{{url_for("main.view_policy_in_project",id=project.id,cid=policy.id)}}" class="view">View</a></li>
-    <li><a data-id="{{policy.id}}" class="delete-policy">Delete</a></li>
+    <li><a href="{{url_for("main.view_policy_in_project",id=project.id,cid=policy.id)}}" class="view">Vizualizar</a></li>
+    <li><a data-id="{{policy.id}}" class="delete-policy">Excluir</a></li>
   </ul>
 </div>
               </td>
@@ -88,8 +88,8 @@
     <div id="view-modal-body" class="card-body">
 <div class="overflow-hidden bg-white border shadow sm:rounded-lg">
   <div class="px-4 py-5 sm:px-6">
-    <h3 class="text-lg font-medium leading-6 text-gray-900">Policy Details</h3>
-    <p class="mt-1 max-w-2xl text-sm text-gray-500">View detailed information about the policy</p>
+    <h3 class="text-lg font-medium leading-6 text-gray-900">Detalhes das Políticas</h3>
+    <p class="mt-1 max-w-2xl text-sm text-gray-500">Ver informações detalhadas sobre a política</p>
   </div>
   <div class="border-t border-gray-200">
     <dl id="div-holder"><dl>
@@ -113,7 +113,7 @@
          contentType: "application/json; charset=utf-8",
          dataType: "json",
          success: function(data){
-             createToast("success","Deleted policy")
+             createToast("Sucesso!","Deleted policy")
              setTimeout(function() {location.reload();}, 500);
              return(data)
          },
